--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,6 +7,6 @@
 - name: Careers
   link: /careers.html
 - name: Social/Environmental
-  link: social.html
+  link: /social.html
 - name: Contact
-  link: contact.html
+  link: /contact.html
